--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,30 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if IE 9 ]><html class="ie9 no-js"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+    {% include head.html %}
+    {{ content_for_header }}
+  </head>
 
-  {% include head.html %}
+  <body id="{{ page_title | handle }}" class="{% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" >
 
-  <body>
+    <div id="PageContainer">
 
-    {% include header.html %}
+      {% include navbar-top.html %}
+      {% include navbar-main.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      <main role="main">
+        <div class="container">
+          {{ content }}
+        </div>
+      </main>
+
+      {% include site-footer.html %}
+
     </div>
 
-    {% include footer.html %}
-
   </body>
-
 </html>
