--- a/css/main.scss
+++ b/css/main.scss
@@ -46,7 +46,8 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "layout",
-        "syntax-highlighting"
+  "theme"
+        // "base",
+        // "layout",
+        // "syntax-highlighting"
 ;
