experimenting with collections and products

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <!-- Title and description ================================================== -->
-  <title>
-    {{ page_title }}{% if current_tags %}{% assign meta_tags = current_tags | join: ', ' %} &ndash; {{ 'general.meta.tags' | t: tags: meta_tags }}{% endif %}{% if current_page != 1 %} &ndash; {{ 'general.meta.page' | t: page: current_page }}{% endif %}{% unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless %}
-  </title>
+  <title>{{ site.title }}</title>
 
   {% if page_description %}
     <meta name="description" content="{{ page_description | escape }}">
