--- a/_includes/product-grid-item.html
+++ b/_includes/product-grid-item.html
@@ -11,12 +11,12 @@
 
 <div class="col-md-3 col-sm-4 col-xs-6">
   <div class="product-grid-item thumbnail">
-    <a href="{{ include.product.urlj | within: collection }}" class="grid__image">
+    <a href="{{ include.product.url }}" class="grid__image">
       <img class="grid-img" src="{{ include.product.featured_image.src }}" alt="{{ include.product.featured_image.alt | escape }}"/>
     </a>
     <div class="product-caption">
       <h5>
-        <a href="{{ include.product.urlj }}">{{ include.product.title }}</a>
+        <a href="{{ include.product.url }}">{{ include.product.title }}</a>
       </h5>
       <p>
         {% comment %}
