--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,11 @@
 ---
 layout: default
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<h1 class="post-title">{{ page.title }}</h1>
 
-  <article class="post-content">
+<div class="col-xs-12">
+
     {{ content }}
-  </article>
 
 </div>
