--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,6 @@
 layout: default
 ---
 
-<h1 class="post-title">{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
-<div class="col-xs-12">
-
-    {{ content }}
-
-</div>
+{{ content }}
