added blog sidebar snippet

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,10 +42,8 @@ layout: default
     {% endcomment %}
 
   </div>
-{% comment %}
 
   <div class="col-md-3" role="complementary">
-    {% include 'blog-sidebar' %}
+    {% include blog-sidebar.html %}
   </div>
-{% endcomment %}
 </div>
