added javascript to toggle address new and edit forms

--- a/_includes/list-customer-addresses.html
+++ b/_includes/list-customer-addresses.html
@@ -22,7 +22,7 @@
       </address>
       <p>
         <div class="btn btn-xs btn-default">
-          Edit
+          <a href="#" onclick="toggleEditForm({{ address.id }});">Edit</a>
         </div>
         <div class="btn btn-xs btn-danger">
           Delete
