--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,7 @@
   <!-- {{ 'fastclick.min.js' | asset_url | script_tag }} -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="/js/theme.js"></script>
 
   {% comment %}
     If you store has customer accounts disabled, you can remove the following JS file
