enabled social links and news letter in settings object

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -1,4 +1,4 @@
-
+{% assign settings = site.data.settings %}
 
 <footer class="site-footer">
   <div class="container">
@@ -46,34 +46,34 @@
       </div>
       {% endif %}
       {% if settings.footer_newsletter_enable %}
-      <div class="col-md-3">
-        {% comment %}
-        MailChimp is the go-to newsletter service for Shopify.
-        Use the link below to find your MailChimp form action
-        and insert it in your site settings.
-        MailChimp newsletter integration and requirement:
-        - http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action
-        {% endcomment %}
-        <h3>{{ 'layout.footer.newsletter_title' | t }}</h3>
-        {% if settings.newsletter_form_action != blank %}
-        {% assign form_action = settings.newsletter_form_action %}
-        {% else %}
-        {% assign form_action = '#' %}
-        {% endif %}
-        <form action="{{ form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
-          <div class="input-group">
-            <input type="email" value="{% if customer %}{{ customer.email }}{% endif %}" placeholder="{{ 'general.newsletter_form.newsletter_email' | t }}" name="EMAIL" id="mail" class="form-control" aria-label="{{ 'general.newsletter_form.newsletter_email' | t }}" autocorrect="off" autocapitalize="off">
-            <span class="input-group-btn">
-              <input type="submit" class="btn btn-default" name="subscribe" id="subscribe" value="{{ 'general.newsletter_form.submit' | t }}">
-            </span>
-          </div>
-        </form>
-      </div>
+        <div class="col-md-3">
+          {% comment %}
+          MailChimp is the go-to newsletter service for Shopify.
+          Use the link below to find your MailChimp form action
+          and insert it in your site settings.
+          MailChimp newsletter integration and requirement:
+          - http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action
+          {% endcomment %}
+          <h3>Newsletter</h3>
+          {% if settings.newsletter_form_action != blank %}
+          {% assign form_action = settings.newsletter_form_action %}
+          {% else %}
+          {% assign form_action = '#' %}
+          {% endif %}
+          <form action="{{ form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
+            <div class="input-group">
+              <input type="email" value="{% if customer %}{{ customer.email }}{% endif %}" placeholder="Email" name="EMAIL" id="mail" class="form-control" aria-label="{{ 'general.newsletter_form.newsletter_email' | t }}" autocorrect="off" autocapitalize="off">
+              <span class="input-group-btn">
+                <input type="submit" class="btn btn-default" name="subscribe" id="subscribe" value="Submit">
+              </span>
+            </div>
+          </form>
+        </div>
       {% endif %}
       {% if settings.enable_footer_social %}
       <div class="col-md-3">
-        <h3>{{ "layout.footer.social_title" | t }}</h3>
-        {% include "social-links" %}
+        <h3>get connected</h3>
+        {% include social-links.html %}
       </div>
       {% endif %}
       <div class="col-md-12 text-center">
