--- a/_includes/navbar-main.html
+++ b/_includes/navbar-main.html
@@ -1,7 +1,8 @@
 
 
-<nav class="navbar navbar-default main-nav">
+<nav class="navbar navbar-default navbar-static-top">
   <div class="container">
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -12,7 +13,7 @@
       </button>
       <a class="navbar-brand" href="/" itemprop="url">
         {% if settings.logo_use_image %}
-            <img src="{{ 'logo.png' | asset_url }}" alt="{{ shop.name }}" itemprop="logo">
+          <img src="{{ 'logo.png' | asset_url }}" alt="{{ shop.name }}" itemprop="logo">
         {% else %}
           {{ site.shop.name }}
         {% endif %}
@@ -26,7 +27,9 @@
          {% assign child_list_handle = link.title | downcase | replace: " ", "-" %}
          {% if link[child_list_handle].links != nil %}
            <li class="dropdown{% if link.active %} active{% endif %}">
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+               {{ link.title }} <span class="caret"></span>
+             </a>
              <ul class="dropdown-menu">
                {% for childlink in link[child_list_handle].links %}
                  <li {% if childlink.active %} class="active"{% endif %}>
