--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -74,12 +74,11 @@
       {% endif %}
       {% if settings.enable_footer_social %}
       <div class="col-md-3">
-        <h3>get connected</h3>
+        <h3>Social</h3>
         {% include social-links.html %}
       </div>
       {% endif %}
       <div class="col-md-12 text-center">
-        <hr>
         <small>{{ powered_by_link }}</small>
       </div>
     </div>
