--- a/_includes/navbar-top.html
+++ b/_includes/navbar-top.html
@@ -1,27 +1,35 @@
 
 
-<div class="top-bar">
+<nav class="navbar navbar-default navbar-static-top navbar-inverse navbar-top">
   <div class="container">
-    <div class="row">
-      <div class="col-xs-6">
-        <span class="label glyphicon glyphicon-earphone"> {{ site.shop.phone }} </span>
-
-        <span class="label glyphicon glyphicon-envelope"> {{ site.shop.email }} </span>
-      </div>
-      <div class="col-xs-6 text-right">
-        <div class="btn-group">
-          <button id="account-button" type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            My account <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    <ul class="nav navbar-nav">
+      <li>
+        <a>
+          <span class="glyphicon glyphicon-earphone"></span>
+          {{ site.shop.phone }}
+        </a>
+      </li>
+      <li>
+        <a>
+          <span class="glyphicon glyphicon-envelope"></span>
+          {{ site.shop.email }}
+        </a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li class="dropdown text-right">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          My Account
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
+      </li>
+    </ul>
   </div>
-</div>
+</nav>
