comment out site-footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         </div>
       </main>
 
-      {% include site-footer.html %}
+      <!-- {% include site-footer.html %} -->
 
     </div>
 
