--- a/css/main.scss
+++ b/css/main.scss
@@ -52,6 +52,10 @@
         // "syntax-highlighting"
 // ;
 
+body {
+  margin-bottom: 200px;
+}
+
 .navbar-top {
   min-height: 0;
   margin-bottom: 0;
