--- a/_includes/navbar-top.html
+++ b/_includes/navbar-top.html
@@ -23,11 +23,19 @@
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
+          <li>
+            <a href="/account">My Account</a>
+          </li>
+          <li>
+            <a href="/account/login/index.html">Login</a>
+          </li>
+          <li>
+            <a href="/account/register">Create account</a>
+          </li>
           <li role="separator" class="divider"></li>
-          <li><a href="#">Logout</a></li>
+          <li>
+            <a href="#">Logout</a>
+          </li>
         </ul>
       </li>
     </ul>
