--- a/_includes/blog-sidebar.html
+++ b/_includes/blog-sidebar.html
@@ -1,33 +1,33 @@
 {% assign blog = site.data.blog %}
+
 {% comment %}
   Recent blog posts
 {% endcomment %}
-<h4>Recent Articles</h4>
-<ul class="list-unstyled">
-  {% for article in site.posts limit:6 %}
-  <li>
-      <strong><a class="blog-post" href="{{ article.url }}">{{ article.title }}</a></strong>
-      <br>
-      <small class="text-muted">
-        {{ article.published_at }}
-      </small>
-  </li>
-  {% endfor %}
-</ul>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>Recent Articles</h4>
+  </div>
+  <ul class="list-group">
+    {% for article in site.posts limit:6 %}
+      <a class="list-group-item" href="{{ article.url }}">{{ article.title }}</a>
+    {% endfor %}
+  </ul>
+</div>
 
-<hr>
 {% comment %}
   Blog tags
 {% endcomment %}
 {% if blog.all_tags.size > 0 %}
-  <h4>Tags</h4>
-  <div class="post">
-    <ul class="tags">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4>Tags</h4>
+    </div>
+    <ul class="list-group">
       {% for tag in blog.all_tags %}
         {% if current_tags contains tag %}
-          <li><a class="active" href="#">{{ tag }}</a></li>
+          <a class="list-group-item active" href="#">{{ tag }}</a></li>
         {% else %}
-          <li><a href="#">{{ tag }}</a></li>
+          <a class="list-group-item" href="#">{{ tag }}</a>
         {%endif%}
       {% endfor %}
     </ul>
