--- a/_includes/breadcrumb.html
+++ b/_includes/breadcrumb.html
@@ -5,7 +5,7 @@
   {% assign second_text = include.product.title %}
   {% assign second_href = include.product.url %}
 {% elsif include.type == "post" %}
-  {% assign first_text = "Home" %}
+  {% assign first_text = "Blog" %}
   {% assign first_href = "/blogs/news/" %}
   {% assign second_is_last = true %}
   {% assign second_text = include.post.title %}
