change submit buttons to simple buttons

--- a/_includes/product.html
+++ b/_includes/product.html
@@ -89,7 +89,7 @@
             <hr>
 
             <div class="form-group">
-              <button type="submit" name="add" id="AddToCart" class="btn btn-default">
+              <button type="button" name="add" id="AddToCart" class="btn btn-default">
                 <span id="AddToCartText">Add to cart</span>
               </button>
             </div>
