changed submit buttons to simple buttons

--- a/_includes/edit-customer-address.html
+++ b/_includes/edit-customer-address.html
@@ -61,7 +61,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <span class="pull-left"><input type="submit" class="btn btn-primary" value="Update"></span>
+        <span class="pull-left"><input type="button" class="btn btn-primary" value="Update"></span>
         <span class="pull-right"><a href="#" class="btn btn-default" onclick="Shopify.CustomerAddress.toggleForm({{ form.id }}); return false;">Cancel</a></span>
       </div>
     </div>
