--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -125,7 +125,7 @@ layout: default
             <p>{{ 'blogs.comments.moderated' | t }}</p>
           {% endif %}
 
-          <input type="submit" class="btn btn-primary" value="Post Comment">
+          <input type="button" class="btn btn-primary" value="Post Comment">
 
           {% comment %}
             Assign variable to be used after timber.init() is run in theme.liquid
