--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -66,7 +66,7 @@
             <div class="input-group">
               <input type="email" value="{% if customer %}{{ customer.email }}{% endif %}" placeholder="Email" name="EMAIL" id="mail" class="form-control" aria-label="{{ 'general.newsletter_form.newsletter_email' | t }}" autocorrect="off" autocapitalize="off">
               <span class="input-group-btn">
-                <input type="submit" class="btn btn-default" name="subscribe" id="subscribe" value="Submit">
+                <input type="button" class="btn btn-default" name="subscribe" id="subscribe" value="Submit">
               </span>
             </div>
           </form>
