--- a/_includes/product-grid-item.html
+++ b/_includes/product-grid-item.html
@@ -11,11 +11,11 @@
 {% endif %}
 
 <div class="col-md-3 col-sm-4 col-xs-6">
-  <div class="product-grid-item thumbnail">
-    <a href="{{ product.url }}" class="grid__image">
-      <img class="grid-img" src="{{ featured_image.src2 }}" alt="{{ featured_image.alt }}"/>
+  <div class="thumbnail">
+    <a href="{{ product.url }}">
+      <img src="{{ featured_image.src2 }}" alt="{{ featured_image.alt }}"/>
     </a>
-    <div class="product-caption">
+    <div class="caption">
       <h5>
         <a href="{{ product.url }}">{{ product.title }}</a>
       </h5>
