use better image placeholers

--- a/_includes/product-grid-item.html
+++ b/_includes/product-grid-item.html
@@ -13,7 +13,8 @@
 <div class="col-md-3 col-sm-4 col-xs-6">
   <div class="thumbnail">
     <a href="{{ product.url }}">
-      <img src="{{ featured_image.src2 }}" alt="{{ featured_image.alt }}"/>
+      <!-- <img src="{{ featured_image.src2 }}" alt="{{ featured_image.alt }}"> -->
+      <img src="https://placeimg.com/253/253/{{ product.id }}" alt="">
     </a>
     <div class="caption">
       <h5>
