--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -3,31 +3,21 @@
 <div id="carousel-example-generic" class="carousel slide home-carousel" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
+    {% for i in (0..2) %}
+      <li data-target="#carousel-example-generic" data-slide-to="{{ i }}" {% if i == 0 %}class="active"{% endif %}></li>
+    {% endfor %}
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <a href="#">
-        <img src="https://placeholdit.imgix.net/~text?txtsize=50&txt=SLIDE&w=1200&h=600" alt="Slide 1">
-      </a>
-      <div class="carousel-caption">Slide 1 caption</div>
-    </div>
-    <div class="item">
-      <a href="#">
-        <img src="https://placeholdit.imgix.net/~text?txtsize=50&txt=SLIDE&w=1200&h=600" alt="Slide 2">
-      </a>
-      <div class="carousel-caption">Slide 2 caption</div>
-    </div>
-    <div class="item">
-      <a href="#">
-        <img src="https://placeholdit.imgix.net/~text?txtsize=50&txt=SLIDE&w=1200&h=600" alt="Slide 3">
-      </a>
-      <div class="carousel-caption">Slide 3 caption</div>
-    </div>
+    {% for i in (0..2) %}
+      <div class="item {% if i == 0 %}active{% endif %}">
+        <a href="#">
+          <img src="https://placeimg.com/1170/500/{{ i }}" alt="Slide {{ i | plus: 1 }}">
+        </a>
+        <div class="carousel-caption">Slide {{ i | plus: 1 }} caption</div>
+      </div>
+    {% endfor %}
   </div>
 
   <!-- Controls -->
