--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -15,7 +15,7 @@
         <a href="#">
           <img src="https://placeimg.com/1170/500/{{ i }}" alt="Slide {{ i | plus: 1 }}">
         </a>
-        <div class="carousel-caption">Slide {{ i | plus: 1 }} caption</div>
+        <div class="carousel-caption">Lacinia odio suscipit vestibulum nisl...</div>
       </div>
     {% endfor %}
   </div>
