carousel image height

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,7 +13,7 @@
     {% for i in (0..2) %}
       <div class="item {% if i == 0 %}active{% endif %}">
         <a href="#">
-          <img src="https://placeimg.com/1170/500/{{ i }}" alt="Slide {{ i | plus: 1 }}">
+          <img src="https://placeimg.com/1170/500/{{ i }}" alt="Slide {{ i | plus: 1 }}" style="height:500px;">
         </a>
         <div class="carousel-caption">Lacinia odio suscipit vestibulum nisl...</div>
       </div>
