--- a/_includes/product-grid-item.html
+++ b/_includes/product-grid-item.html
@@ -12,9 +12,9 @@
 
 <div class="col-md-3 col-sm-4 col-xs-6">
   <div class="thumbnail">
-    <a href="{{ product.url }}">
+    <a href="{{ product.url }}" class="grid-img-outer">
       <!-- <img src="{ featured_image.src2 }" alt="{ featured_image.alt }"> -->
-      <img src="https://placeimg.com/253/253/{{ product.id }}" alt="" style="height:253px;background:#222;">
+      <img src="https://placeimg.com/253/253/{{ product.id }}" alt="{{ product.title }}">
     </a>
     <div class="caption">
       <h5>
