update image placeholders

--- a/_includes/product-grid-item.html
+++ b/_includes/product-grid-item.html
@@ -14,7 +14,7 @@
   <div class="thumbnail">
     <a href="{{ product.url }}" class="grid-img-outer">
       <!-- <img src="{ featured_image.src2 }" alt="{ featured_image.alt }"> -->
-      <img src="https://placeimg.com/253/253/{{ product.id }}" alt="{{ product.title }}">
+      <img src="http://lorempixel.com/g/253/253/technics?random={{ product.id }}" alt="{{ product.title }}">
     </a>
     <div class="caption">
       <h5>
