--- a/_includes/owl.html
+++ b/_includes/owl.html
@@ -8,7 +8,7 @@
 <div id="owl-carousel" class="owl-carousel">
   {% for i in (1..3) %}
     <div class="item">
-      <img src="https://placeimg.com/1170/500/{{ i }}" alt="Slide {{ i }}" style="height:500px;">
+      <img src="http://lorempixel.com/g/1170/500?random={{ i }}" alt="Slide {{ i }}" style="height:500px;">
     </div>
   {% endfor %}
 </div>
