--- a/_includes/owl.html
+++ b/_includes/owl.html
@@ -6,9 +6,9 @@
 <script src="/assets/owl-carousel/owl.carousel.min.js"></script>
 
 <div id="owl-carousel" class="owl-carousel">
-  {% for i in (1..3) %}
+  {% for i in (1..10) %}
     <div class="item">
-      <img src="http://lorempixel.com/g/1170/500?random={{ i }}" alt="Slide {{ i }}" style="height:500px;">
+      <img src="/img/carousel/{{ i }}.jpg" alt="Slide {{ i }}" class="img-responsive">
     </div>
   {% endfor %}
 </div>
