add owl carousel headlines

--- a/_includes/owl.html
+++ b/_includes/owl.html
@@ -9,6 +9,10 @@
   {% for i in (1..10) %}
     <div class="item">
       <img src="/img/carousel/{{ i }}.jpg" alt="Slide {{ i }}" class="img-responsive">
+      <div class="item-text">
+        <h2>Shop Our Store</h2>
+        <h3>Get your hands on our latest and greatest products and publications.</h3>
+      </div>
     </div>
   {% endfor %}
 </div>
